bug fix for donate button styles, it also needs to override the hover background coming from relish styles else the span uses secondary color rather than button background. https://github.com/indiereign/shift72-web/blob/master/src/ui/donate-button/donate-button.scss#L12

--- a/site/styles/_buttons.scss
+++ b/site/styles/_buttons.scss
@@ -246,6 +246,9 @@
 }
 
 s72-donate-button:not(:empty) {
+   :hover {
+     background-color: $button-background-hover;
+   }
    &:hover a {
     background-color: $button-background-hover;
     color: $button-text-color-hover;
